--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ header{
 	margin-bottom:20px;
 }
 
-heade h1{
+header h1{
 	color: #2C3E50;
 	font-size:28px;
 }
 
 h2{
-	color:#34495E
+	color:#34495E;
 	margin-bottom:10px;
 	border-bottom:10px;
 	padding-bottom:5px;
@@ -31,12 +31,27 @@ h2{
 
 ul{
 	list-style-type: disc;
-	padding-left:20px.
+	padding-left:20px;
 }
 
 footer{
 	text-align: center;
 	margin-top:20px;
-	fonte-size:0.9em;
-	color:#777
+	font-size:0.9em;
+	color:#777;
+}
+
+.perfil{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+	gap:10px;
+}
+
+.foto-perfil{
+	width:175px;
+	height:175px;
+	object-fit:cover;
+	border-radius:50%;
+	border:2px solid #2C3E50;
 }
