--- a/dark.css
+++ b/dark.css
@@ -70,3 +70,23 @@ footer{
 	font-size: 0.9em;
 	color: #AAAAAA;
 }
+
+.tema-btn{
+    position: fixed;
+    top: 20px;
+    left: 20px;    
+    z-index: 9999;
+}
+
+.tema_btn button{
+	padding:10px 14px;
+	border:none;
+	border-radius:50%;
+	cursor:pointer;
+	font-size:16px;
+	background-color: #222;
+	color: #E0E0E0;
+	box-shadow:0 2px 5px rgba(0,0,0,0.3)
+}
+
+
