--- a/light.css
+++ b/light.css
@@ -55,3 +55,24 @@ footer{
 	border-radius:50%;
 	border:2px solid #2C3E50;
 }
+
+.tema-btn{
+    position: fixed;
+    top: 20px;
+    left: 20px;    
+    z-index: 9999;
+}
+
+.tema_btn button{
+	padding:10px 14px;
+	border:none;
+	border-radius:50%;
+	cursor:pointer;
+	font-size:16px;
+	backdrop-color:#4FC3F2;
+	color:#000;
+	box-shadow:0 2px 5px rgba(0,0,0,0.3)
+}
+
+
+
